--- a/ProjectNept/ProjectNept/ProjectNept.vcxproj.filters
+++ b/ProjectNept/ProjectNept/ProjectNept.vcxproj.filters
@@ -21,5 +21,13 @@
     <ClCompile Include="..\Additional Dependencies\glad\src\glad.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Engine.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Engine.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
