--- a/ProjectNept/ProjectNept/ProjectNept.vcxproj
+++ b/ProjectNept/ProjectNept/ProjectNept.vcxproj
@@ -136,6 +136,7 @@
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="ShaderCompiler.cpp" />
+    <ClCompile Include="stb_image.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine.h" />
@@ -148,7 +149,8 @@
     <Text Include="vertexShader.txt" />
   </ItemGroup>
   <ItemGroup>
-    <Image Include="C:\Users\Alessio\Pictures\wall.jpg" />
+    <Image Include="container.jpg" />
+    <Image Include="wall.jpg" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
