added mouse movement

--- a/ProjectNept/ProjectNept/ProjectNept.vcxproj.filters
+++ b/ProjectNept/ProjectNept/ProjectNept.vcxproj.filters
@@ -47,6 +47,9 @@
     <ClInclude Include="stb_image.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="flyingCamera.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="vertexShader.txt" />
