--- a/ProjectNept/ProjectNept/ProjectNept.vcxproj
+++ b/ProjectNept/ProjectNept/ProjectNept.vcxproj
@@ -142,6 +142,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine.h" />
+    <ClInclude Include="flyingCamera.h" />
     <ClInclude Include="ShaderCompiler.h" />
     <ClInclude Include="stb_image.h" />
     <ClInclude Include="Vertex.h" />
