--- a/ProjectNept/ProjectNept/ProjectNept.vcxproj
+++ b/ProjectNept/ProjectNept/ProjectNept.vcxproj
@@ -70,12 +70,12 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>D:\Repo\ProjectNept\ProjectNept\Additional Dependencies\glad\include;D:\Repo\ProjectNept\ProjectNept\Additional Dependencies\glfw-3.3.2\include;$(IncludePath)</IncludePath>
-    <LibraryPath>D:\Repo\ProjectNept\ProjectNept\Additional Dependencies\glfw-3.3.2\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>D:\Repo\ProjectNept\ProjectNept\Additional Dependencies\Assimp\include;D:\Repo\ProjectNept\ProjectNept\Additional Dependencies\glad\include;D:\Repo\ProjectNept\ProjectNept\Additional Dependencies\glfw-3.3.2\include;$(IncludePath)</IncludePath>
+    <LibraryPath>D:\Repo\ProjectNept\ProjectNept\Additional Dependencies\Assimp\Library;D:\Repo\ProjectNept\ProjectNept\Additional Dependencies\glfw-3.3.2\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <IncludePath>D:\Repo\ProjectNept\ProjectNept\Additional Dependencies\glad\include;D:\Repo\ProjectNept\ProjectNept\Additional Dependencies\glfw-3.3.2\include;$(IncludePath)</IncludePath>
-    <LibraryPath>D:\Repo\ProjectNept\ProjectNept\Additional Dependencies\glfw-3.3.2\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>D:\Repo\ProjectNept\ProjectNept\Additional Dependencies\Assimp\include;D:\Repo\ProjectNept\ProjectNept\Additional Dependencies\glad\include;D:\Repo\ProjectNept\ProjectNept\Additional Dependencies\glfw-3.3.2\include;$(IncludePath)</IncludePath>
+    <LibraryPath>D:\Repo\ProjectNept\ProjectNept\Additional Dependencies\Assimp\Library;D:\Repo\ProjectNept\ProjectNept\Additional Dependencies\glfw-3.3.2\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -98,7 +98,7 @@
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
-      <AdditionalDependencies>glfw3.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>glfw3.lib;assimpd.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -130,19 +130,23 @@
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>glfw3.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>glfw3.lib;assimpd.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\Additional Dependencies\glad\src\glad.c" />
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Mesh.cpp" />
+    <ClCompile Include="Model.cpp" />
     <ClCompile Include="ShaderCompiler.cpp" />
     <ClCompile Include="stb_image.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine.h" />
     <ClInclude Include="flyingCamera.h" />
+    <ClInclude Include="Mesh.h" />
+    <ClInclude Include="Model.h" />
     <ClInclude Include="ShaderCompiler.h" />
     <ClInclude Include="stb_image.h" />
     <ClInclude Include="Vertex.h" />
