--- a/ProjectNept/ProjectNept/ProjectNept.vcxproj.filters
+++ b/ProjectNept/ProjectNept/ProjectNept.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="Model.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="WaterBuffers.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine.h">
@@ -60,6 +63,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Model.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="WaterBuffers.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
